# bde

./: CMakeLists.txt  GroupCMakeTemplate.txt  bdetocmake.py
groups/bal/: CMakeLists.txt
groups/bal/group/: bal.mem
groups/bbl/: CMakeLists.txt
groups/bdl/: CMakeLists.txt
groups/bdl/bdldfp/: bdldfp_decimalimputil_inteldfp.h  bdldfp_denselypackeddecimalimputil.cpp  bdldfp_intelimpwrapper.h
groups/bdl/bdlpcre/: bdlpcre_regex.h
groups/bsl/: CMakeLists.txt
groups/btl/: CMakeLists.txt
