# bal

list(APPEND sources
    "balb/balb_controlmanager.cpp"
    "balb/balb_controlmanager.h"
    "balb/balb_performancemonitor.cpp"
    "balb/balb_performancemonitor.h"
    "balb/balb_pipecontrolchannel.cpp"
    "balb/balb_pipecontrolchannel.h"
    "balb/balb_testmessages.cpp"
    "balb/balb_testmessages.h"
    "balber/balber_berconstants.cpp"
    "balber/balber_berconstants.h"
    "balber/balber_berdecoder.cpp"
    "balber/balber_berdecoder.h"
    "balber/balber_berdecoderoptions.cpp"
    "balber/balber_berdecoderoptions.h"
    "balber/balber_berencoder.cpp"
    "balber/balber_berencoder.h"
    "balber/balber_berencoderoptions.cpp"
    "balber/balber_berencoderoptions.h"
    "balber/balber_beruniversaltagnumber.cpp"
    "balber/balber_beruniversaltagnumber.h"
    "balber/balber_berutil.cpp"
    "balber/balber_berutil.h"
    "baljsn/baljsn_decoder.cpp"
    "baljsn/baljsn_decoder.h"
    "baljsn/baljsn_decoderoptions.cpp"
    "baljsn/baljsn_decoderoptions.h"
    "baljsn/baljsn_encoder.cpp"
    "baljsn/baljsn_encoder.h"
    "baljsn/baljsn_encoderoptions.cpp"
    "baljsn/baljsn_encoderoptions.h"
    "baljsn/baljsn_parserutil.cpp"
    "baljsn/baljsn_parserutil.h"
    "baljsn/baljsn_printutil.cpp"
    "baljsn/baljsn_printutil.h"
    "baljsn/baljsn_tokenizer.cpp"
    "baljsn/baljsn_tokenizer.h"
    "ball/ball_administration.cpp"
    "ball/ball_administration.h"
    "ball/ball_asyncfileobserver.cpp"
    "ball/ball_asyncfileobserver.h"
    "ball/ball_attribute.cpp"
    "ball/ball_attribute.h"
    "ball/ball_attributecontainer.cpp"
    "ball/ball_attributecontainer.h"
    "ball/ball_attributecontainerlist.cpp"
    "ball/ball_attributecontainerlist.h"
    "ball/ball_attributecontext.cpp"
    "ball/ball_attributecontext.h"
    "ball/ball_category.cpp"
    "ball/ball_category.h"
    "ball/ball_categorymanager.cpp"
    "ball/ball_categorymanager.h"
    "ball/ball_context.cpp"
    "ball/ball_context.h"
    "ball/ball_countingallocator.cpp"
    "ball/ball_countingallocator.h"
    "ball/ball_defaultattributecontainer.cpp"
    "ball/ball_defaultattributecontainer.h"
    "ball/ball_defaultobserver.cpp"
    "ball/ball_defaultobserver.h"
    "ball/ball_fileobserver.cpp"
    "ball/ball_fileobserver.h"
    "ball/ball_fileobserver2.cpp"
    "ball/ball_fileobserver2.h"
    "ball/ball_fixedsizerecordbuffer.cpp"
    "ball/ball_fixedsizerecordbuffer.h"
    "ball/ball_log.cpp"
    "ball/ball_log.h"
    "ball/ball_loggercategoryutil.cpp"
    "ball/ball_loggercategoryutil.h"
    "ball/ball_loggerfunctorpayloads.cpp"
    "ball/ball_loggerfunctorpayloads.h"
    "ball/ball_loggermanager.cpp"
    "ball/ball_loggermanager.h"
    "ball/ball_loggermanagerconfiguration.cpp"
    "ball/ball_loggermanagerconfiguration.h"
    "ball/ball_loggermanagerdefaults.cpp"
    "ball/ball_loggermanagerdefaults.h"
    "ball/ball_multiplexobserver.cpp"
    "ball/ball_multiplexobserver.h"
    "ball/ball_observer.cpp"
    "ball/ball_observer.h"
    "ball/ball_observeradapter.cpp"
    "ball/ball_observeradapter.h"
    "ball/ball_patternutil.cpp"
    "ball/ball_patternutil.h"
    "ball/ball_predicate.cpp"
    "ball/ball_predicate.h"
    "ball/ball_predicateset.cpp"
    "ball/ball_predicateset.h"
    "ball/ball_record.cpp"
    "ball/ball_record.h"
    "ball/ball_recordattributes.cpp"
    "ball/ball_recordattributes.h"
    "ball/ball_recordbuffer.cpp"
    "ball/ball_recordbuffer.h"
    "ball/ball_recordstringformatter.cpp"
    "ball/ball_recordstringformatter.h"
    "ball/ball_rule.cpp"
    "ball/ball_rule.h"
    "ball/ball_ruleset.cpp"
    "ball/ball_ruleset.h"
    "ball/ball_scopedattribute.cpp"
    "ball/ball_scopedattribute.h"
    "ball/ball_scopedattributes.cpp"
    "ball/ball_scopedattributes.h"
    "ball/ball_severity.cpp"
    "ball/ball_severity.h"
    "ball/ball_severityutil.cpp"
    "ball/ball_severityutil.h"
    "ball/ball_testobserver.cpp"
    "ball/ball_testobserver.h"
    "ball/ball_thresholdaggregate.cpp"
    "ball/ball_thresholdaggregate.h"
    "ball/ball_transmission.cpp"
    "ball/ball_transmission.h"
    "ball/ball_userfieldtype.cpp"
    "ball/ball_userfieldtype.h"
    "ball/ball_userfields.cpp"
    "ball/ball_userfields.h"
    "ball/ball_userfieldvalue.cpp"
    "ball/ball_userfieldvalue.h"
    "balm/balm_category.cpp"
    "balm/balm_category.h"
    "balm/balm_collector.cpp"
    "balm/balm_collector.h"
    "balm/balm_collectorrepository.cpp"
    "balm/balm_collectorrepository.h"
    "balm/balm_configurationutil.cpp"
    "balm/balm_configurationutil.h"
    "balm/balm_defaultmetricsmanager.cpp"
    "balm/balm_defaultmetricsmanager.h"
    "balm/balm_integercollector.cpp"
    "balm/balm_integercollector.h"
    "balm/balm_integermetric.cpp"
    "balm/balm_integermetric.h"
    "balm/balm_metric.cpp"
    "balm/balm_metric.h"
    "balm/balm_metricdescription.cpp"
    "balm/balm_metricdescription.h"
    "balm/balm_metricformat.cpp"
    "balm/balm_metricformat.h"
    "balm/balm_metricid.cpp"
    "balm/balm_metricid.h"
    "balm/balm_metricrecord.cpp"
    "balm/balm_metricrecord.h"
    "balm/balm_metricregistry.cpp"
    "balm/balm_metricregistry.h"
    "balm/balm_metrics.cpp"
    "balm/balm_metrics.h"
    "balm/balm_metricsample.cpp"
    "balm/balm_metricsample.h"
    "balm/balm_metricsmanager.cpp"
    "balm/balm_metricsmanager.h"
    "balm/balm_publicationscheduler.cpp"
    "balm/balm_publicationscheduler.h"
    "balm/balm_publicationtype.cpp"
    "balm/balm_publicationtype.h"
    "balm/balm_publisher.cpp"
    "balm/balm_publisher.h"
    "balm/balm_stopwatchscopedguard.cpp"
    "balm/balm_stopwatchscopedguard.h"
    "balm/balm_streampublisher.cpp"
    "balm/balm_streampublisher.h"
    "balscm/balscm_version.cpp"
    "balscm/balscm_version.h"
    "balscm/balscm_versiontag.cpp"
    "balscm/balscm_versiontag.h"
    "baltzo/baltzo_datafileloader.cpp"
    "baltzo/baltzo_datafileloader.h"
    "baltzo/baltzo_defaultzoneinfocache.cpp"
    "baltzo/baltzo_defaultzoneinfocache.h"
    "baltzo/baltzo_dstpolicy.cpp"
    "baltzo/baltzo_dstpolicy.h"
    "baltzo/baltzo_errorcode.cpp"
    "baltzo/baltzo_errorcode.h"
    "baltzo/baltzo_loader.cpp"
    "baltzo/baltzo_loader.h"
    "baltzo/baltzo_localdatetime.cpp"
    "baltzo/baltzo_localdatetime.h"
    "baltzo/baltzo_localtimedescriptor.cpp"
    "baltzo/baltzo_localtimedescriptor.h"
    "baltzo/baltzo_localtimeoffsetutil.cpp"
    "baltzo/baltzo_localtimeoffsetutil.h"
    "baltzo/baltzo_localtimeperiod.cpp"
    "baltzo/baltzo_localtimeperiod.h"
    "baltzo/baltzo_localtimevalidity.cpp"
    "baltzo/baltzo_localtimevalidity.h"
    "baltzo/baltzo_testloader.cpp"
    "baltzo/baltzo_testloader.h"
    "baltzo/baltzo_timezoneutil.cpp"
    "baltzo/baltzo_timezoneutil.h"
    "baltzo/baltzo_timezoneutilimp.cpp"
    "baltzo/baltzo_timezoneutilimp.h"
    "baltzo/baltzo_windowstimezoneutil.cpp"
    "baltzo/baltzo_windowstimezoneutil.h"
    "baltzo/baltzo_zoneinfo.cpp"
    "baltzo/baltzo_zoneinfo.h"
    "baltzo/baltzo_zoneinfobinaryheader.cpp"
    "baltzo/baltzo_zoneinfobinaryheader.h"
    "baltzo/baltzo_zoneinfobinaryreader.cpp"
    "baltzo/baltzo_zoneinfobinaryreader.h"
    "baltzo/baltzo_zoneinfocache.cpp"
    "baltzo/baltzo_zoneinfocache.h"
    "baltzo/baltzo_zoneinfoutil.cpp"
    "baltzo/baltzo_zoneinfoutil.h"
    "balxml/balxml_base64parser.cpp"
    "balxml/balxml_base64parser.h"
    "balxml/balxml_configschema.cpp"
    "balxml/balxml_configschema.h"
    "balxml/balxml_decoder.cpp"
    "balxml/balxml_decoder.h"
    "balxml/balxml_decoderoptions.cpp"
    "balxml/balxml_decoderoptions.h"
    "balxml/balxml_elementattribute.cpp"
    "balxml/balxml_elementattribute.h"
    "balxml/balxml_encoder.cpp"
    "balxml/balxml_encoder.h"
    "balxml/balxml_encoderoptions.cpp"
    "balxml/balxml_encoderoptions.h"
    "balxml/balxml_encodingstyle.cpp"
    "balxml/balxml_encodingstyle.h"
    "balxml/balxml_errorinfo.cpp"
    "balxml/balxml_errorinfo.h"
    "balxml/balxml_formatter.cpp"
    "balxml/balxml_formatter.h"
    "balxml/balxml_hexparser.cpp"
    "balxml/balxml_hexparser.h"
    "balxml/balxml_listparser.cpp"
    "balxml/balxml_listparser.h"
    "balxml/balxml_minireader.cpp"
    "balxml/balxml_minireader.h"
    "balxml/balxml_namespaceregistry.cpp"
    "balxml/balxml_namespaceregistry.h"
    "balxml/balxml_prefixstack.cpp"
    "balxml/balxml_prefixstack.h"
    "balxml/balxml_reader.cpp"
    "balxml/balxml_reader.h"
    "balxml/balxml_typesparserutil.cpp"
    "balxml/balxml_typesparserutil.h"
    "balxml/balxml_typesprintutil.cpp"
    "balxml/balxml_typesprintutil.h"
    "balxml/balxml_util.cpp"
    "balxml/balxml_util.h"
    "balxml/balxml_validatingreader.cpp"
    "balxml/balxml_validatingreader.h"
)
source_group("" FILES ${sources})

add_library(bal STATIC ${sources})

target_include_directories(bal PUBLIC
    balb
    balber
    baljsn
    ball
    balm
    balscm
    #balst
    baltzo
    balxml
)

target_link_libraries(bal PUBLIC
    bdl
    bsl
)
