# bdl

list(APPEND sources
    "bdlat/bdlat_arrayfunctions.cpp"
    "bdlat/bdlat_arrayfunctions.h"
    "bdlat/bdlat_arrayiterators.cpp"
    "bdlat/bdlat_arrayiterators.h"
    "bdlat/bdlat_attributeinfo.cpp"
    "bdlat/bdlat_attributeinfo.h"
    "bdlat/bdlat_bdeatoverrides.cpp"
    "bdlat/bdlat_bdeatoverrides.h"
    "bdlat/bdlat_choicefunctions.cpp"
    "bdlat/bdlat_choicefunctions.h"
    "bdlat/bdlat_customizedtypefunctions.cpp"
    "bdlat/bdlat_customizedtypefunctions.h"
    "bdlat/bdlat_enumeratorinfo.cpp"
    "bdlat/bdlat_enumeratorinfo.h"
    "bdlat/bdlat_enumfunctions.cpp"
    "bdlat/bdlat_enumfunctions.h"
    "bdlat/bdlat_formattingmode.cpp"
    "bdlat/bdlat_formattingmode.h"
    "bdlat/bdlat_nullablevaluefunctions.cpp"
    "bdlat/bdlat_nullablevaluefunctions.h"
    "bdlat/bdlat_selectioninfo.cpp"
    "bdlat/bdlat_selectioninfo.h"
    "bdlat/bdlat_sequencefunctions.cpp"
    "bdlat/bdlat_sequencefunctions.h"
    "bdlat/bdlat_symbolicconverter.cpp"
    "bdlat/bdlat_symbolicconverter.h"
    "bdlat/bdlat_typecategory.cpp"
    "bdlat/bdlat_typecategory.h"
    "bdlat/bdlat_typename.cpp"
    "bdlat/bdlat_typename.h"
    "bdlat/bdlat_typetraits.cpp"
    "bdlat/bdlat_typetraits.h"
    "bdlat/bdlat_valuetypefunctions.cpp"
    "bdlat/bdlat_valuetypefunctions.h"
    "bdlb/bdlb_arrayutil.cpp"
    "bdlb/bdlb_arrayutil.h"
    "bdlb/bdlb_bigendian.cpp"
    "bdlb/bdlb_bigendian.h"
    "bdlb/bdlb_bitmaskutil.cpp"
    "bdlb/bdlb_bitmaskutil.h"
    "bdlb/bdlb_bitstringimputil.cpp"
    "bdlb/bdlb_bitstringimputil.h"
    "bdlb/bdlb_bitstringutil.cpp"
    "bdlb/bdlb_bitstringutil.h"
    "bdlb/bdlb_bitutil.cpp"
    "bdlb/bdlb_bitutil.h"
    "bdlb/bdlb_chartype.cpp"
    "bdlb/bdlb_chartype.h"
    "bdlb/bdlb_cstringequalto.cpp"
    "bdlb/bdlb_cstringequalto.h"
    "bdlb/bdlb_cstringhash.cpp"
    "bdlb/bdlb_cstringhash.h"
    "bdlb/bdlb_cstringless.cpp"
    "bdlb/bdlb_cstringless.h"
    "bdlb/bdlb_float.cpp"
    "bdlb/bdlb_float.h"
    "bdlb/bdlb_functionoutputiterator.cpp"
    "bdlb/bdlb_functionoutputiterator.h"
    "bdlb/bdlb_guid.cpp"
    "bdlb/bdlb_guid.h"
    "bdlb/bdlb_guidutil.cpp"
    "bdlb/bdlb_guidutil.h"
    "bdlb/bdlb_hashutil.cpp"
    "bdlb/bdlb_hashutil.h"
    "bdlb/bdlb_nullableallocatedvalue.cpp"
    "bdlb/bdlb_nullableallocatedvalue.h"
    "bdlb/bdlb_nullablevalue.cpp"
    "bdlb/bdlb_nullablevalue.h"
    "bdlb/bdlb_nulloutputiterator.cpp"
    "bdlb/bdlb_nulloutputiterator.h"
    "bdlb/bdlb_literalutil.cpp"
    "bdlb/bdlb_literalutil.h"
    "bdlb/bdlb_print.cpp"
    "bdlb/bdlb_print.h"
    "bdlb/bdlb_printmethods.cpp"
    "bdlb/bdlb_printmethods.h"
    "bdlb/bdlb_random.cpp"
    "bdlb/bdlb_random.h"
    "bdlb/bdlb_randomdevice.cpp"
    "bdlb/bdlb_randomdevice.h"
    "bdlb/bdlb_string.cpp"
    "bdlb/bdlb_string.h"
    "bdlb/bdlb_stringrefutil.cpp"
    "bdlb/bdlb_stringrefutil.h"
    "bdlb/bdlb_testinputiterator.cpp"
    "bdlb/bdlb_testinputiterator.h"
    "bdlb/bdlb_tokenizer.cpp"
    "bdlb/bdlb_tokenizer.h"
    "bdlb/bdlb_variant.cpp"
    "bdlb/bdlb_variant.h"
    "bdlc/bdlc_bitarray.cpp"
    "bdlc/bdlc_bitarray.h"
    "bdlc/bdlc_hashtable.cpp"
    "bdlc/bdlc_hashtable.h"
    "bdlc/bdlc_indexclerk.cpp"
    "bdlc/bdlc_indexclerk.h"
    "bdlc/bdlc_packedintarray.cpp"
    "bdlc/bdlc_packedintarray.h"
    "bdlc/bdlc_packedintarrayutil.cpp"
    "bdlc/bdlc_packedintarrayutil.h"
    "bdlc/bdlc_queue.cpp"
    "bdlc/bdlc_queue.h"
    "bdlcc/bdlcc_deque.cpp"
    "bdlcc/bdlcc_deque.h"
    "bdlcc/bdlcc_fixedqueue.cpp"
    "bdlcc/bdlcc_fixedqueue.h"
    "bdlcc/bdlcc_fixedqueueindexmanager.cpp"
    "bdlcc/bdlcc_fixedqueueindexmanager.h"
    "bdlcc/bdlcc_multipriorityqueue.cpp"
    "bdlcc/bdlcc_multipriorityqueue.h"
    "bdlcc/bdlcc_objectcatalog.cpp"
    "bdlcc/bdlcc_objectcatalog.h"
    "bdlcc/bdlcc_objectpool.cpp"
    "bdlcc/bdlcc_objectpool.h"
    "bdlcc/bdlcc_queue.cpp"
    "bdlcc/bdlcc_queue.h"
    "bdlcc/bdlcc_sharedobjectpool.cpp"
    "bdlcc/bdlcc_sharedobjectpool.h"
    "bdlcc/bdlcc_skiplist.cpp"
    "bdlcc/bdlcc_skiplist.h"
    "bdlcc/bdlcc_timequeue.cpp"
    "bdlcc/bdlcc_timequeue.h"
    "bdld/bdld_datum.cpp"
    "bdld/bdld_datum.h"
    "bdld/bdld_datumarraybuilder.cpp"
    "bdld/bdld_datumarraybuilder.h"
    "bdld/bdld_datumbinaryref.cpp"
    "bdld/bdld_datumbinaryref.h"
    "bdld/bdld_datumerror.cpp"
    "bdld/bdld_datumerror.h"
    "bdld/bdld_datummaker.cpp"
    "bdld/bdld_datummaker.h"
    "bdld/bdld_datummapbuilder.cpp"
    "bdld/bdld_datummapbuilder.h"
    "bdld/bdld_datummapowningkeysbuilder.cpp"
    "bdld/bdld_datummapowningkeysbuilder.h"
    "bdld/bdld_datumudt.cpp"
    "bdld/bdld_datumudt.h"
    "bdld/bdld_manageddatum.cpp"
    "bdld/bdld_manageddatum.h"
    "bdlde/bdlde_base64decoder.cpp"
    "bdlde/bdlde_base64decoder.h"
    "bdlde/bdlde_base64encoder.cpp"
    "bdlde/bdlde_base64encoder.h"
    "bdlde/bdlde_byteorder.cpp"
    "bdlde/bdlde_byteorder.h"
    "bdlde/bdlde_charconvertstatus.cpp"
    "bdlde/bdlde_charconvertstatus.h"
    "bdlde/bdlde_charconvertucs2.cpp"
    "bdlde/bdlde_charconvertucs2.h"
    "bdlde/bdlde_charconvertutf16.cpp"
    "bdlde/bdlde_charconvertutf16.h"
    "bdlde/bdlde_charconvertutf32.cpp"
    "bdlde/bdlde_charconvertutf32.h"
    "bdlde/bdlde_crc32.cpp"
    "bdlde/bdlde_crc32.h"
    "bdlde/bdlde_crc64.cpp"
    "bdlde/bdlde_crc64.h"
    "bdlde/bdlde_md5.cpp"
    "bdlde/bdlde_md5.h"
    "bdlde/bdlde_quotedprintabledecoder.cpp"
    "bdlde/bdlde_quotedprintabledecoder.h"
    "bdlde/bdlde_quotedprintableencoder.cpp"
    "bdlde/bdlde_quotedprintableencoder.h"
    "bdlde/bdlde_utf8util.cpp"
    "bdlde/bdlde_utf8util.h"
    "bdldfp/bdldfp_binaryintegraldecimalimputil.cpp"
    "bdldfp/bdldfp_binaryintegraldecimalimputil.h"
    "bdldfp/bdldfp_decimal.cpp"
    "bdldfp/bdldfp_decimal.h"
    "bdldfp/bdldfp_decimalplatform.cpp"
    "bdldfp/bdldfp_decimalplatform.h"
    "bdldfp/bdldfp_decimalconvertutil.cpp"
    "bdldfp/bdldfp_decimalconvertutil.h"
    "bdldfp/bdldfp_decimalconvertutil_decnumber.cpp"
    "bdldfp/bdldfp_decimalconvertutil_decnumber.h"
    "bdldfp/bdldfp_decimalconvertutil_ibmxlc.cpp"
    "bdldfp/bdldfp_decimalconvertutil_ibmxlc.h"
    "bdldfp/bdldfp_decimalconvertutil_inteldfp.cpp"
    "bdldfp/bdldfp_decimalconvertutil_inteldfp.h"
    "bdldfp/bdldfp_decimalimputil.cpp"
    "bdldfp/bdldfp_decimalimputil.h"
    "bdldfp/bdldfp_decimalimputil_decnumber.cpp"
    "bdldfp/bdldfp_decimalimputil_decnumber.h"
    "bdldfp/bdldfp_decimalimputil_ibmxlc.cpp"
    "bdldfp/bdldfp_decimalimputil_ibmxlc.h"
    "bdldfp/bdldfp_decimalimputil_inteldfp.cpp"
    "bdldfp/bdldfp_decimalimputil_inteldfp.h"
    "bdldfp/bdldfp_decimalutil.cpp"
    "bdldfp/bdldfp_decimalutil.h"
    "bdldfp/bdldfp_denselypackeddecimalimputil.cpp"
    "bdldfp/bdldfp_denselypackeddecimalimputil.h"
    "bdldfp/bdldfp_intelimpwrapper.cpp"
    "bdldfp/bdldfp_intelimpwrapper.h"
    "bdldfp/bdldfp_uint128.cpp"
    "bdldfp/bdldfp_uint128.h"
    "bdlf/bdlf_bind.cpp"
    "bdlf/bdlf_bind.h"
    "bdlf/bdlf_bind_test.cpp"
    "bdlf/bdlf_bind_test.h"
    "bdlf/bdlf_bind_test0.cpp"
    "bdlf/bdlf_bind_test0.h"
    "bdlf/bdlf_bind_test1.cpp"
    "bdlf/bdlf_bind_test1.h"
    "bdlf/bdlf_bind_test10.cpp"
    "bdlf/bdlf_bind_test10.h"
    "bdlf/bdlf_bind_test11.cpp"
    "bdlf/bdlf_bind_test11.h"
    "bdlf/bdlf_bind_test12.cpp"
    "bdlf/bdlf_bind_test12.h"
    "bdlf/bdlf_bind_test13.cpp"
    "bdlf/bdlf_bind_test13.h"
    "bdlf/bdlf_bind_test14.cpp"
    "bdlf/bdlf_bind_test14.h"
    "bdlf/bdlf_bind_test2.cpp"
    "bdlf/bdlf_bind_test2.h"
    "bdlf/bdlf_bind_test3.cpp"
    "bdlf/bdlf_bind_test3.h"
    "bdlf/bdlf_bind_test4.cpp"
    "bdlf/bdlf_bind_test4.h"
    "bdlf/bdlf_bind_test5.cpp"
    "bdlf/bdlf_bind_test5.h"
    "bdlf/bdlf_bind_test6.cpp"
    "bdlf/bdlf_bind_test6.h"
    "bdlf/bdlf_bind_test7.cpp"
    "bdlf/bdlf_bind_test7.h"
    "bdlf/bdlf_bind_test8.cpp"
    "bdlf/bdlf_bind_test8.h"
    "bdlf/bdlf_bind_test9.cpp"
    "bdlf/bdlf_bind_test9.h"
    "bdlf/bdlf_bind_testn.cpp"
    "bdlf/bdlf_bind_testn.h"
    "bdlf/bdlf_memfn.cpp"
    "bdlf/bdlf_memfn.h"
    "bdlf/bdlf_placeholder.cpp"
    "bdlf/bdlf_placeholder.h"
    "bdlma/bdlma_alignedallocator.cpp"
    "bdlma/bdlma_alignedallocator.h"
    "bdlma/bdlma_aligningallocator.cpp"
    "bdlma/bdlma_aligningallocator.h"
    "bdlma/bdlma_autoreleaser.cpp"
    "bdlma/bdlma_autoreleaser.h"
    "bdlma/bdlma_blocklist.cpp"
    "bdlma/bdlma_blocklist.h"
    "bdlma/bdlma_bufferedsequentialallocator.cpp"
    "bdlma/bdlma_bufferedsequentialallocator.h"
    "bdlma/bdlma_bufferedsequentialpool.cpp"
    "bdlma/bdlma_bufferedsequentialpool.h"
    "bdlma/bdlma_bufferimputil.cpp"
    "bdlma/bdlma_bufferimputil.h"
    "bdlma/bdlma_buffermanager.cpp"
    "bdlma/bdlma_buffermanager.h"
    "bdlma/bdlma_concurrentallocatoradapter.cpp"
    "bdlma/bdlma_concurrentallocatoradapter.h"
    "bdlma/bdlma_concurrentfixedpool.cpp"
    "bdlma/bdlma_concurrentfixedpool.h"
    "bdlma/bdlma_concurrentmultipool.cpp"
    "bdlma/bdlma_concurrentmultipool.h"
    "bdlma/bdlma_concurrentmultipoolallocator.cpp"
    "bdlma/bdlma_concurrentmultipoolallocator.h"
    "bdlma/bdlma_concurrentpool.cpp"
    "bdlma/bdlma_concurrentpool.h"
    "bdlma/bdlma_concurrentpoolallocator.cpp"
    "bdlma/bdlma_concurrentpoolallocator.h"
    "bdlma/bdlma_countingallocator.cpp"
    "bdlma/bdlma_countingallocator.h"
    "bdlma/bdlma_defaultdeleter.cpp"
    "bdlma/bdlma_defaultdeleter.h"
    "bdlma/bdlma_deleter.cpp"
    "bdlma/bdlma_deleter.h"
    "bdlma/bdlma_factory.cpp"
    "bdlma/bdlma_factory.h"
    "bdlma/bdlma_guardingallocator.cpp"
    "bdlma/bdlma_guardingallocator.h"
    "bdlma/bdlma_heapbypassallocator.cpp"
    "bdlma/bdlma_heapbypassallocator.h"
    "bdlma/bdlma_infrequentdeleteblocklist.cpp"
    "bdlma/bdlma_infrequentdeleteblocklist.h"
    "bdlma/bdlma_localsequentialallocator.cpp"
    "bdlma/bdlma_localsequentialallocator.h"
    "bdlma/bdlma_managedallocator.cpp"
    "bdlma/bdlma_managedallocator.h"
    "bdlma/bdlma_memoryblockdescriptor.cpp"
    "bdlma/bdlma_memoryblockdescriptor.h"
    "bdlma/bdlma_multipool.cpp"
    "bdlma/bdlma_multipool.h"
    "bdlma/bdlma_multipoolallocator.cpp"
    "bdlma/bdlma_multipoolallocator.h"
    "bdlma/bdlma_pool.cpp"
    "bdlma/bdlma_pool.h"
    "bdlma/bdlma_sequentialallocator.cpp"
    "bdlma/bdlma_sequentialallocator.h"
    "bdlma/bdlma_sequentialpool.cpp"
    "bdlma/bdlma_sequentialpool.h"
    "bdlmt/bdlmt_eventscheduler.cpp"
    "bdlmt/bdlmt_eventscheduler.h"
    "bdlmt/bdlmt_fixedthreadpool.cpp"
    "bdlmt/bdlmt_fixedthreadpool.h"
    "bdlmt/bdlmt_multiprioritythreadpool.cpp"
    "bdlmt/bdlmt_multiprioritythreadpool.h"
    "bdlmt/bdlmt_multiqueuethreadpool.cpp"
    "bdlmt/bdlmt_multiqueuethreadpool.h"
    "bdlmt/bdlmt_threadmultiplexor.cpp"
    "bdlmt/bdlmt_threadmultiplexor.h"
    "bdlmt/bdlmt_threadpool.cpp"
    "bdlmt/bdlmt_threadpool.h"
    "bdlmt/bdlmt_timereventscheduler.cpp"
    "bdlmt/bdlmt_timereventscheduler.h"
    "bdlpcre/bdlpcre_regex.cpp"
    "bdlpcre/bdlpcre_regex.h"
    "bdls/bdls_fdstreambuf.cpp"
    "bdls/bdls_fdstreambuf.h"
    "bdls/bdls_filedescriptorguard.cpp"
    "bdls/bdls_filedescriptorguard.h"
    "bdls/bdls_filesystemutil.cpp"
    "bdls/bdls_filesystemutil.h"
    "bdls/bdls_memoryutil.cpp"
    "bdls/bdls_memoryutil.h"
    "bdls/bdls_osutil.cpp"
    "bdls/bdls_osutil.h"
    "bdls/bdls_pathutil.cpp"
    "bdls/bdls_pathutil.h"
    "bdls/bdls_pipeutil.cpp"
    "bdls/bdls_pipeutil.h"
    "bdls/bdls_processutil.cpp"
    "bdls/bdls_processutil.h"
    "bdls/bdls_testutil.cpp"
    "bdls/bdls_testutil.h"
    "bdlsb/bdlsb_fixedmeminput.cpp"
    "bdlsb/bdlsb_fixedmeminput.h"
    "bdlsb/bdlsb_fixedmeminstreambuf.cpp"
    "bdlsb/bdlsb_fixedmeminstreambuf.h"
    "bdlsb/bdlsb_fixedmemoutput.cpp"
    "bdlsb/bdlsb_fixedmemoutput.h"
    "bdlsb/bdlsb_fixedmemoutstreambuf.cpp"
    "bdlsb/bdlsb_fixedmemoutstreambuf.h"
    "bdlsb/bdlsb_memoutstreambuf.cpp"
    "bdlsb/bdlsb_memoutstreambuf.h"
    "bdlsb/bdlsb_overflowmemoutput.cpp"
    "bdlsb/bdlsb_overflowmemoutput.h"
    "bdlsb/bdlsb_overflowmemoutstreambuf.cpp"
    "bdlsb/bdlsb_overflowmemoutstreambuf.h"
    "bdlscm/bdlscm_version.cpp"
    "bdlscm/bdlscm_version.h"
    "bdlscm/bdlscm_versiontag.cpp"
    "bdlscm/bdlscm_versiontag.h"
    "bdlt/bdlt_calendar.cpp"
    "bdlt/bdlt_calendar.h"
    "bdlt/bdlt_calendarcache.cpp"
    "bdlt/bdlt_calendarcache.h"
    "bdlt/bdlt_calendarloader.cpp"
    "bdlt/bdlt_calendarloader.h"
    "bdlt/bdlt_calendarreverseiteratoradapter.cpp"
    "bdlt/bdlt_calendarreverseiteratoradapter.h"
    "bdlt/bdlt_calendarutil.cpp"
    "bdlt/bdlt_calendarutil.h"
    "bdlt/bdlt_currenttime.cpp"
    "bdlt/bdlt_currenttime.h"
    "bdlt/bdlt_date.cpp"
    "bdlt/bdlt_date.h"
    "bdlt/bdlt_datetime.cpp"
    "bdlt/bdlt_datetime.h"
    "bdlt/bdlt_datetimeimputil.cpp"
    "bdlt/bdlt_datetimeimputil.h"
    "bdlt/bdlt_datetimeinterval.cpp"
    "bdlt/bdlt_datetimeinterval.h"
    "bdlt/bdlt_datetimetz.cpp"
    "bdlt/bdlt_datetimetz.h"
    "bdlt/bdlt_datetimeutil.cpp"
    "bdlt/bdlt_datetimeutil.h"
    "bdlt/bdlt_datetz.cpp"
    "bdlt/bdlt_datetz.h"
    "bdlt/bdlt_dateutil.cpp"
    "bdlt/bdlt_dateutil.h"
    "bdlt/bdlt_dayofweek.cpp"
    "bdlt/bdlt_dayofweek.h"
    "bdlt/bdlt_dayofweekset.cpp"
    "bdlt/bdlt_dayofweekset.h"
    "bdlt/bdlt_defaultcalendarcache.cpp"
    "bdlt/bdlt_defaultcalendarcache.h"
    "bdlt/bdlt_epochutil.cpp"
    "bdlt/bdlt_epochutil.h"
    "bdlt/bdlt_fixutil.cpp"
    "bdlt/bdlt_fixutil.h"
    "bdlt/bdlt_fixutilconfiguration.cpp"
    "bdlt/bdlt_fixutilconfiguration.h"
    "bdlt/bdlt_intervalconversionutil.cpp"
    "bdlt/bdlt_intervalconversionutil.h"
    "bdlt/bdlt_iso8601util.cpp"
    "bdlt/bdlt_iso8601util.h"
    "bdlt/bdlt_iso8601utilconfiguration.cpp"
    "bdlt/bdlt_iso8601utilconfiguration.h"
    "bdlt/bdlt_localtimeoffset.cpp"
    "bdlt/bdlt_localtimeoffset.h"
    "bdlt/bdlt_monthofyear.cpp"
    "bdlt/bdlt_monthofyear.h"
    "bdlt/bdlt_packedcalendar.cpp"
    "bdlt/bdlt_packedcalendar.h"
    "bdlt/bdlt_posixdateimputil.cpp"
    "bdlt/bdlt_posixdateimputil.h"
    "bdlt/bdlt_prolepticdateimputil.cpp"
    "bdlt/bdlt_prolepticdateimputil.h"
    "bdlt/bdlt_serialdateimputil.cpp"
    "bdlt/bdlt_serialdateimputil.h"
    "bdlt/bdlt_time.cpp"
    "bdlt/bdlt_time.h"
    "bdlt/bdlt_timetz.cpp"
    "bdlt/bdlt_timetz.h"
    "bdlt/bdlt_timeunitratio.cpp"
    "bdlt/bdlt_timeunitratio.h"
    "bdlt/bdlt_timeutil.cpp"
    "bdlt/bdlt_timeutil.h"
)
source_group("" FILES ${sources})

add_library(bdl STATIC ${sources})

target_include_directories(bdl PUBLIC
    bdlat
    bdlb
    bdlc
    bdlcc
    bdld
    bdlde
    bdldfp
    bdlf
    bdlma
    bdlmt
    bdlpcre
    bdls
    bdlsb
    bdlscm
    bdlt
)

target_link_libraries(bdl PUBLIC
    bsl
    decnumber
    inteldfp
    pcre2
)
